maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:6: error: not found: value esFaceMur
    while (esFaceMur() == true) {
           ^