maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  
  def keepHandOnSideWall()  {
    
    gauche();
    while (esFaceMur() == true) {
      droite();
    }
    avance();
      
  }
  
  while (estSurBiscuit == false) {
    keepHandOnSideWall();
  }
  
	prendBiscuit();

  
}